--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ dist: trusty
 
 deploy:
   provider: heroku
-  api-key:
-    secure: $HEROKU_API_KEY
+  api-key: $HEROKU_API_KEY
   app: ebuy-registry-service
   on: master
 
 before_install:
   - chmod +x mvnw
+install: true
+
+script: mvn clean package -DskipTests=true
